2012-01-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.h src/datafile.c src/plot2d.c src/breaders.c src/plot3d.c
	src/stats.c:  When reporting bad data in an input file, give the file
	name in addition to the current line number.

2012-01-19  Khanh-Dang  <kdntl@users.sourceforge.net>

	* gplt_x11.c (gpXStoreName):  Provide a name string for both
	WM_NAME and WM_ICON_NAME.

2012-01-17  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* configure.in src/Makefile.am src/qtterminal/Makefile.am
	src/qtterminal/QtGnuplotApplication.cpp
	src/qtterminal/QtGnuplotApplication.h src/qtterminal/QtGnuplotEvent.cpp
	src/qtterminal/QtGnuplotEvent.h src/qtterminal/gnuplot_qt.cpp
	src/qtterminal/qt_term.cpp term/qt.trm: The Qt terminal application is
	executed in a separate executable called gnuplot_qt, started by exec.
	This makes the Qt terminal compatible with OS X.

2012-01-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_plot_bounds):  Store the canvas size used by
	the previous plot in user accessible variables GPVAL_TERM_XSIZE,
	GPVAL_TERM_YSIZE.

2012-01-15  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* src/mouse.c (event_buttonpress): Treat mouse buttons 6/7 as
	left/right scroll events (e.g. from fingers on a touchpad).

	* src/qtterminal/QtGnuplotScene.cpp (mouseReleaseEvent):  Pass
	horizontal scroll events through to gnuplot core as mouse events
	6/7.

2012-01-15 Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.mgw: Sync with configure.

2012-01-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* tutorial/linepoin.plt: Avoid deprecated syntax.

	* win/gnuplot.iss: Create startup menu item for tutorial.pdf.

	* config/mingw/Makefile config/msvc/Makefile src/plot.c:
	GNUPLOT_SHARE_DIR is relative to gnuplot directory on Windows.
	Extend build support for documentation, include in installer.

2012-01-12  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* win/gnuplot.iss: Japanese translation
